--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -11,14 +11,21 @@
     <div class="skills-card">
         <img src="../../../../images/angular.png" alt="">
         <img src="../../../../images/html.png" alt="">
-        <img src="../../../../images/css.svg" alt="">
+        <img src="../../../../images/css.png" alt="">
         <img src="../../../../images/php.png" alt="">
-        <img src="../../../../images/symfony.png" alt="">
+        <img src="../../../../images/symfony.png" alt=""  style="invert: 1; filter: invert(1);"> 
         <img src="../../../../images/mysql.png" alt="">
+        <img src="../../../../images/git.png" alt="">
+        <img src="../../../../images/bootstrap.svg" alt="" style="invert: 1; filter: invert(1);">
+
 
     </div>
 
-
+ <div class="nevel-english-card">
+    <p class="nevel-english-label">Nivel de Inglés</p>
+    <p class="nevel-english-number">B2</p>
+    
+  </div>
 
 
 
