--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -3,18 +3,19 @@
         <div class="about-me-container scroll-reveal" #aboutMeSection>
             <app-about-me></app-about-me>
         </div>
-        <div class="top-right-buttons">
+        <div class="top-right-buttons scroll-reveal" #topRightButtons>
             <app-languaje-bottom></app-languaje-bottom>
             <app-theme></app-theme>
         </div>
     </div>
-    <div class="socials-section scroll-reveal" #socialsSection>
-        <app-socials></app-socials>
-    </div>
+   
     <div class="projects-section scroll-reveal" #projectsSection>
         <app-projects></app-projects>
     </div>
     <div class="skills-section scroll-reveal" #skillsSection>
         <app-skills></app-skills>
+    </div>
+    <div class="contact-section scroll-reveal" #contactSection>
+        <app-contact></app-contact>
     </div>
 </div>
