--- a/src/app/components/about-me/about-me.component.css
+++ b/src/app/components/about-me/about-me.component.css
@@ -4,9 +4,11 @@
     width: auto; /* Full width of the container */
     border-radius: 8px;
     padding: 20px;
+    margin-left: 33px;
     display: flex;
     align-items: center; 
     width: 100%;
+    height: 300px;
     gap: 20px; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
 }
@@ -54,6 +56,6 @@
 
 span{
     font-size: 1.2em;
-    color: #727070;
+    color: #9b9b9b;
     font-weight: bold; 
 }
