--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -4,19 +4,46 @@
     border-radius: 10px;
     padding: 20px;
     color: white;
+    margin: 0 auto;
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 30%;
+    height: 250px;
+    cursor: pointer;
+    margin-top: -40px;
+    position: relative;
   
 }
-.linkdein-label{
-    font-family: 'Source Sans Pro', sans-serif;
+.default-img{
+    width: 100px;
+    height: 100px;
+    display: block;
+    margin-bottom: 10px;
+    
+    object-fit: cover;
+    filter: invert(1);
+        transition: opacity 0.3s ease-in-out;
 
-  font-size: 5em;
-  margin-bottom: 5px;
-  font-weight: bold;
+}
+.hover-img{
+    width: 100px;
+    height: 100px;
+        margin-top: -100px;
+    margin-bottom: 10px;
+    filter: invert(1);
+    transition: opacity 0.3s ease-in-out;
+}
+.contact-card .hover-img {
+  opacity: 0;
+}
 
+.contact-card:hover .default-img {
+  opacity: 0;
+}
+
+.contact-card:hover .hover-img {
+  opacity: 1;
 }
