--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,6 +1,6 @@
 <div class="cards-container">
- <div class="contact-card">
-    aaaa
-    
+  <div class="contact-card">
+    <img class="default-img" src="../../../../images/correo.svg" alt="Correo">
+    <img class="hover-img" src="../../../../images/correo-open.svg" alt="Correo Hover">
   </div>
-    </div>
+</div>
