--- a/src/app/components/projects/projects.component.css
+++ b/src/app/components/projects/projects.component.css
@@ -4,6 +4,7 @@
   gap: 20px;
   justify-content: center;
   padding: 20px;
+  margin-top:-40px
 }
 .projects-card {
   background: none; 
@@ -12,7 +13,7 @@
   color: white;
   position: relative;
   overflow: hidden;
-  width: 55%;
+  width: 52%;
   min-height: 250px; 
   display: flex;
   flex-direction: column;
@@ -56,11 +57,16 @@
 .external-link-icon {
   position: absolute;
   top: 10px;
-  right: 10px;
+  right: 15px;
   color: white;
+  height: 20px;
   text-decoration: none;
-  font-size: 1.2em;
+  font-size: 1.5em;
   z-index: 2;
+}
+.external-link-icon:hover {
+  color: white;
+  transform: scale(1.1);
 }
 .project-illustration {
   position: absolute;
@@ -70,19 +76,25 @@
   height: 100%;
   object-fit: cover;
   z-index: 0;
-  opacity: 0.4; /* ajusta esto según qué tan visible quieres que sea el gif detrás del texto */
+  opacity: 0.4; 
 }
 .linkdein-icon {
-
-    position: absolute;
-    top: 20px;
-    left: 580px;
-    color: white;
-    text-decoration: none;
-    font-size: 1.2em;
-    z-index: 2;
+  position: absolute;
+  top: -5px;
+  margin-left: 260px;
+  color: white;
+  text-decoration: none;
+  
 }
-
+svg{
+  width: 20px;
+  height: 20px;
+  fill: currentColor;
+}
+.linkdein-icon:hover {
+  color: #d1e8ff;
+  transform: scale(1.1);
+}
 .age-card {
   background-color: #E53935; 
   border-radius: 10px;
@@ -93,7 +105,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
- width: 20%;
+  width: 21%;
 }
 
 .age-label {
@@ -122,7 +134,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 20%;
+    width: 23%;
   
 }
 .linkdein-label{
