--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,19 +1,28 @@
 <div class="cards-container">
 
 
-    <div class="gitHub-card">
-
-        <h2>Github </h2>
+   
+ <div class="gitHub-card">
+  <h2>Github </h2>
         <p>Donde subo todos mis proyectos.</p>
-        <a href="#" class="external-link-icon">&#x2197;</a>
-        <img src="../../../../images/github_gif.gif" alt="Project Illustration" class="project-illustration">
-    </div>
+  <a href="https://github.com/marcosvallecillos" target="_blank" class="github-icon">
+<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/>
+  <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0z"/>
+</svg>
+  </a>
+          <img src="../../../../images/github_gif.gif" alt="Project Illustration" class="project-illustration">
+
+</div>
+
+
+
     <div class="skills-card">
         <img src="../../../../images/angular.png" alt="">
         <img src="../../../../images/html.png" alt="">
         <img src="../../../../images/css.png" alt="">
         <img src="../../../../images/php.png" alt="">
-        <img src="../../../../images/symfony.png" alt=""  style="invert: 1; filter: invert(1);"> 
+        <img src="../../../../images/symfony.png" alt="" style="invert: 1; filter: invert(1);">
         <img src="../../../../images/mysql.png" alt="">
         <img src="../../../../images/git.png" alt="">
         <img src="../../../../images/bootstrap.svg" alt="" style="invert: 1; filter: invert(1);">
@@ -21,11 +30,11 @@
 
     </div>
 
- <div class="nevel-english-card">
-    <p class="nevel-english-label">Nivel de Inglés</p>
-    <p class="nevel-english-number">B2</p>
-    
-  </div>
+    <div class="nevel-english-card">
+        <p class="nevel-english-label">Nivel de Inglés</p>
+        <p class="nevel-english-number">B2</p>
+
+    </div>
 
 
 
