--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -4,9 +4,9 @@
  
 
   <div class="age-card">
-    <p class="age-label">EDAD</p>
+    <p class="age-label">{{getText('EDAD','AGE')}} </p>
     <p class="age-number">19</p>
-    <p class="age-years">AÑOS</p>
+    <p class="age-years">{{getText('AÑOS','YEARS OLD')}} </p>
   </div>
 
   <div class="linkdein-card">
@@ -23,8 +23,8 @@
 
    <div class="projects-card">
     
-     <h2>Proyectos </h2>
-     <p>Aquí puedes encontrar algunos de mis proyectos.</p>
+     <h2>{{getText('Proyectos','Projects')}} </h2>
+     <p>{{getText('Aquí puedes encontrar algunos de mis proyectos.','Here you can find some of my projects.')}} </p>
      <a href="#" class="external-link-icon">&#x21E8;  </a>
      <img src="../../../../images/gif_programando.gif" alt="Project Illustration" class="project-illustration">
    </div>
