--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -3,16 +3,18 @@
 
    
  <div class="gitHub-card">
-  <h2>Github </h2>
-        <p>Donde subo todos mis proyectos.</p>
+ 
   <a href="https://github.com/marcosvallecillos" target="_blank" class="github-icon">
 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
   <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/>
   <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0z"/>
 </svg>
   </a>
-          <img src="../../../../images/github_gif.gif" alt="Project Illustration" class="project-illustration">
 
+      <h2>Github </h2>
+      <img src="../../../../images/github_gif.gif" alt="Project Illustration" class="project-illustration">
+
+        <p>Mi perfil de Github, donde subo mis proyectos.</p>
 </div>
 
 
