--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -25,7 +25,7 @@
     
      <h2>{{getText('Proyectos','Projects')}} </h2>
      <p>{{getText('Aquí puedes encontrar algunos de mis proyectos.','Here you can find some of my projects.')}} </p>
-     <a href="#" class="external-link-icon">&#x21E8;  </a>
+     <a href="#" routerLink="/projects" class="external-link-icon">&#x21E8;  </a>
      <img src="../../../../images/gif_programando.gif" alt="Project Illustration" class="project-illustration">
    </div>
 </div>
