--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -14,7 +14,7 @@
       <h2>Github </h2>
       <img src="../../../../images/github_gif.gif" alt="Project Illustration" class="project-illustration">
 
-        <p>Mi perfil de Github, donde subo mis proyectos.</p>
+        <p>{{getText('Mi perfil de Github, donde subo mis proyectos.', 'My Github profile, where I upload my projects.')}} </p>
 </div>
 
 
@@ -33,7 +33,7 @@
     </div>
 
     <div class="nevel-english-card">
-        <p class="nevel-english-label">Nivel de Inglés</p>
+        <p class="nevel-english-label">{{getText('Nivel de Inglés', 'English level')}} </p>
         <p class="nevel-english-number">B2</p>
 
     </div>
