añadiendo header para cambiar de pantallas, añadiendo seccion proyectos y cambiando switch en theme

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,5 +1,8 @@
 <div class="container full-height bg-black text-white">
     <div class="header-section">
+        <div class="header-container" >
+            <app-header></app-header>
+        </div>
         <div class="about-me-container scroll-reveal" #aboutMeSection>
             <app-about-me></app-about-me>
         </div>
