--- a/src/app/components/theme/theme.component.html
+++ b/src/app/components/theme/theme.component.html
@@ -1,6 +1,8 @@
 <div class="theme-card">
   <label class="switch">
-    <input type="checkbox" (change)="toggleTheme()">
-    <span class="slider round"></span>
-  </label>
+        <input type="checkbox" (change)="toggleTheme()" [checked]="isDarkTheme">
+        <span class="slider round">
+        </span>
+        
+      </label>
 </div>
