--- a/src/app/components/about-me/about-me.component.css
+++ b/src/app/components/about-me/about-me.component.css
@@ -1,6 +1,6 @@
 .about-me-card {
-    background-color: #1a1a1a; 
-    color: white;
+    background-color: var(--card-background);
+    color: var(--text-color);
     border-radius: 8px;
     padding: 20px;
     margin: 0 auto;
@@ -13,6 +13,7 @@
     gap: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
+    transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .text-content {
@@ -27,15 +28,19 @@
     font-size: 1.5em;
     margin-bottom: 10px;
     text-align: center;
+    color: var(--header-title-color);
+
+    transition: color 0.3s ease;
 }
 
 .text-content p {
     font-size: 1em;
-    color: #ffffff;
+    color: var(--text-color);
     font-weight: bold;
     line-height: 1.5;
     text-wrap: balance;
     margin: 0;
+    transition: color 0.3s ease;
 }
 
 .image-placeholder {
@@ -43,10 +48,11 @@
     height: 120px;
     border-radius: 50%;
     overflow: hidden;
-    background-color: #ccc;
+    background-color: var(--tech-tag-bg);
     flex-shrink: 0;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    border: 3px solid #ffffff;
+    border: 3px solid var(--text-color);
+    transition: background-color 0.3s ease, border-color 0.3s ease;
 }
 
 .image-placeholder img {
@@ -57,10 +63,12 @@
 
 span {
     font-size: 1em;
-    color: #9b9b9b;
+    color: var(--text-color);
+    opacity: 0.7;
     font-weight: normal;
     display: block;
     margin-top: 10px;
+    transition: color 0.3s ease;
 }
 
 /* Tablet */
