--- a/src/app/views/projects/projects.component.html
+++ b/src/app/views/projects/projects.component.html
@@ -12,9 +12,9 @@
           </div>
         
           <div class="project-content">
-            <h3 class="project-title">{{ project.title }}</h3>
-            <p class="project-description">{{ project.description }}</p>
-            <div class="project-technologies">
+           <h3 class="project-title">{{ getText(project.title.es, project.title.en) }}</h3>
+            <p class="project-description">{{ getText(project.description.es, project.description.en) }}</p>
+           <div class="project-technologies">
               @for (tech of project.technologies; track tech) {
                 <span class="tech-tag">{{ tech }}</span>
               }
